--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -194,10 +194,7 @@ body {
   font-size: 3rem;
 }
 
-.error_message {
-  background-color: rgba(255, 187, 181, 0.6);
+.small-margin-top {
   margin-top: 2rem;
-  padding: 0.5rem;
-  width: 100%;
 }
 /*# sourceMappingURL=app.css.map */
