--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -213,3 +213,19 @@ body {
 .small-margin-top {
 	margin-top: 2rem;
 }
+
+// --- Profile ---
+.profile_title {
+	margin-top: 2rem;
+	text-transform: uppercase;
+	background-color: $light-blue;
+	color: white;
+	padding: 0 1rem;
+}
+
+.profile_listing {
+	width: 15rem;
+	height: 15rem;
+	border-radius: 0.5rem;
+	margin: 1rem;
+}
