--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -207,9 +207,21 @@ body {
 }
 
 .profile_listing {
-  width: 15rem;
+  width: 100%;
   height: 15rem;
   border-radius: 0.5rem;
-  margin: 1rem;
+  margin: 1rem 0;
+}
+
+@media only screen and (max-width: 992px) {
+  .profile_listing {
+    height: 10rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .profile_listing {
+    height: 20rem;
+  }
 }
 /*# sourceMappingURL=app.css.map */
