--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -122,6 +122,15 @@ body {
   background-color: #7da6b9;
 }
 
+@media only screen and (max-width: 992px) {
+  .listing_image {
+    width: 100%;
+  }
+  .listing_btn {
+    display: block;
+  }
+}
+
 .icon {
   margin-left: 0.5rem;
 }
