--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -137,6 +137,18 @@ body {
 	}
 }
 
+@media only screen and (max-width: 992px) {
+	.listing {
+		&_image {
+			width: 100%;
+		}
+
+		&_btn {
+			display: block;
+		}
+	}
+}
+
 .icon {
 	margin-left: 0.5rem;
 }
