--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -207,12 +207,14 @@ body {
   margin-top: 2rem;
 }
 
-.profile_title {
+.banner {
   margin-top: 2rem;
   text-transform: uppercase;
   background-color: #b0d9ec;
   color: white;
-  padding: 0 1rem;
+  padding: 1rem 1rem;
+  text-align: center;
+  border-radius: 0.5rem;
 }
 
 .profile_listing {
