--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -227,12 +227,14 @@ body {
 }
 
 // --- Profile ---
-.profile_title {
+.banner {
 	margin-top: 2rem;
 	text-transform: uppercase;
 	background-color: $light-blue;
 	color: white;
-	padding: 0 1rem;
+	padding: 1rem 1rem;
+	text-align: center;
+	border-radius: 0.5rem;
 }
 
 .profile_listing {
