--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -48,13 +48,15 @@ body {
 
 .navbar_input {
 	width: 25rem;
+	padding-left: 0.5rem;
 }
 .navbar_button {
 	background-color: $light-grey;
+	position: absolute;
 	border: none;
 	font-size: 1.5rem;
 	color: $dark-blue;
-	translate: 0 0.2rem;
+	margin-top: 0.1rem;
 }
 
 // --- Products ---
