--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -60,8 +60,8 @@ body {
 }
 
 .info {
-	background: linear-gradient(to right bottom, $medium-blue, $lightest-blue);
-	height: 50rem;
+	background: linear-gradient(to right bottom, $medium-blue, #b193cf);
+	height: 35rem;
 
 	&_column {
 		margin: 2rem 0;
@@ -70,7 +70,7 @@ body {
 		width: 80%;
 		margin: 0 auto;
 		text-align: center;
-		padding-top: 8rem;
+		padding-top: 10rem;
 	}
 	&_text {
 		margin: 0 auto;
@@ -94,6 +94,32 @@ body {
 	}
 }
 
+.testimonial {
+	background: linear-gradient(to right bottom, $light-blue, $lightest-blue);
+	height: 35rem;
+	padding-top: 10rem;
+
+	&_row {
+		margin: 0 auto;
+		margin-bottom: 2rem;
+		width: 80%;
+	}
+
+	&_card {
+		padding-top: 1rem;
+		height: 100%;
+	}
+
+	&_text {
+		font-size: 1rem;
+	}
+	&_avatar {
+		width: 6rem;
+		height: 6rem;
+		border-radius: 50%;
+		margin: 0 auto;
+	}
+}
 //--- Navbar ---
 
 .navbar_input {
