Add background images to the homepage

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -7,8 +7,9 @@ body {
 }
 
 .header {
-  background: -webkit-gradient(linear, right top, left bottom, from(#e6f7ff), to(#b0d9ec));
-  background: linear-gradient(to left bottom, #e6f7ff, #b0d9ec);
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(199, 168, 230, 0.7)), to(rgba(176, 217, 236, 0.7))), url("https://images.unsplash.com/photo-1494319827402-c4b839aed26b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
+  background: linear-gradient(to bottom, rgba(199, 168, 230, 0.7), rgba(176, 217, 236, 0.7)), url("https://images.unsplash.com/photo-1494319827402-c4b839aed26b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
+  background-size: cover;
   text-align: center;
   padding: 12rem 0;
 }
@@ -19,12 +20,10 @@ body {
 
 .header_banner--title {
   font-size: 5rem;
-  text-shadow: 1px 1px 3px #5e7c8b;
 }
 
 .header_banner--subtitle {
   font-size: 2rem;
-  text-shadow: 1px 1px 3px #5e7c8b;
 }
 
 .btn_title {
@@ -58,8 +57,9 @@ body {
 .info_text {
   margin: 0 auto;
   width: 65%;
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   color: white;
+  text-shadow: 1px 1px 4px #7da6b9;
 }
 
 .info_icon {
@@ -84,28 +84,32 @@ body {
 }
 
 .testimonial {
-  background: -webkit-gradient(linear, right top, left bottom, from(#e6f7ff), to(#c7a8e6));
-  background: linear-gradient(to left bottom, #e6f7ff, #c7a8e6);
+  background: -webkit-gradient(linear, right top, left bottom, from(rgba(230, 247, 255, 0.8)), to(rgba(199, 168, 230, 0.8))), url("https://images.unsplash.com/photo-1546548729-375ff057ec22?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
+  background: linear-gradient(to left bottom, rgba(230, 247, 255, 0.8), rgba(199, 168, 230, 0.8)), url("https://images.unsplash.com/photo-1546548729-375ff057ec22?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
+  background-size: cover;
+  background-position: center;
   padding: 10rem 0;
 }
 
 .testimonial_header {
-  text-shadow: 1px 1px 3px #5e7c8b;
+  text-shadow: 1px 1px 5px #5e7c8b;
+  display: block;
   color: white;
-  font-size: 3rem;
+  font-size: 3.5rem;
   text-align: center;
-  margin-bottom: 4rem;
+  margin-bottom: 5rem;
 }
 
 .testimonial_row {
   margin: 0 auto;
-  margin-bottom: 2rem;
+  margin-bottom: 2.5rem;
   width: 80%;
 }
 
 .testimonial_card {
   padding-top: 1rem;
   height: 100%;
+  color: #5e7c8b;
 }
 
 .testimonial_avatar {
@@ -132,7 +136,10 @@ body {
 
 .signup_text {
   color: white;
+  text-shadow: 1px 1px 3px #7da6b9;
   margin: 5rem 0;
+  margin-right: 2rem;
+  float: right;
 }
 
 .signup_text--main {
@@ -147,6 +154,16 @@ body {
   border-radius: 0.5rem;
   padding: 2rem 0;
   width: 25rem;
+  float: left;
+}
+
+@media only screen and (max-width: 768px) {
+  .signup_text {
+    float: none;
+  }
+  .signup_form {
+    float: none;
+  }
 }
 
 .navbar_input {
